avoid that we create invalid file names

e.g. many special characters haev issues, not
just the / mentioned in the bug report

BUG: 453272