addons/externaltools/kateexternaltool.h
@@ -10,6 +10,7 @@
 #include <QMetaType>
 #include <QString>
 #include <QStringList>
+#include <QUrl>
 
 class KConfigGroup;
 
@@ -122,17 +123,14 @@ public:
     QString translatedCategory() const;
 
     /**
-     * Returns the config file name for this tool, created based on the tool "name", e.g.
-     * "Clang Format Full File" -> clang_format_full_file
+     * Returns the config file name for this tool, created based on the tool "name".
      * this will be the name of the config file in e.g. ~/.config/kate/externaltools/
+     * will ensure we end up with some valid file name
      */
     static QString configFileName(QString name)
     {
-        name.replace(QLatin1Char(' '), QLatin1Char('_'));
-        // '(' and ')' are problematic as file names in the .qrc file
-        name.replace(QLatin1Char('('), QLatin1Char('_'));
-        name.replace(QLatin1Char(')'), QLatin1Char('_'));
-        return name.toLower();
+        // just percent encode the name, see bug 453272
+        return QString::fromUtf8(QUrl::toPercentEncoding(name));
     }
 };
 
